[project]
name = "diff-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ipykernel>=6.30.1",
  "ipython>=9.5.0",
  "matplotlib>=3.10.6",
  "numpy>=2.3.3",
  "scikit-learn>=1.7.2",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = ["torch", "torchvision"]
cuda = ["torch", "torchvision"]

# Use CUDA wheels only when the "cuda" extra is selected (Windows)
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "extra == 'cuda' and sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "extra == 'cuda' and sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
